DDF-2119: As an Integrator, I want to be able to trigger the caching of selected products in order to allow users to download them from the cache at a later time
Added unit tests for DownloadResourceActionProvider class, updated MetacardTransformerActionProvider
and ViewMetacardActionProvider unit tests to reflect the change of base class, and made other minor
unit test related changes.